IGDD-2180 Alternative Refresh Method
Update refresh and hosts methods in DbConotroller
Remove no longer applicable/available PATCH fix for HttpUrlConnection
Upgrade to JDK 21 (latest LTS)
Add region to Health and Logs
Update Host Repository to report ingress and egress addresses for
refresh
Added query resources to hub where they belong.